--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
             {{ movie.description }}
         </p>
 
-        <a href="#" class="button">Update</a>
-        <a href="#" class="button delete-button">Delete</a>
+        <a href="{{ url_for('edit', index=movie.id) }}" class="button">Update</a>
+        <a href="{{ url_for('delete', index=movie.id)}}" class="button delete-button">Delete</a>
 
       </div>
     </div>
