--- a/templates/select.html
+++ b/templates/select.html
@@ -5,9 +5,10 @@
 {% block content %}
 <div class="container">
     <h1 class="heading">Select Movie</h1>
-  <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
-  </p>
-
+    {% for movie in movies %}
+      <p>
+        <a href="{{ url_for('find_movie', index=movie.imdbID) }}"> {{movie.Title}}- {{movie.Year}}</a>
+      </p>
+    {% endfor %}
 </div>
 {% endblock %}
