--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
   <div class="card" >
     <div class="front" style="background-image: url('{{ movie.img_url }}');">
-        <p class="large">{{ movie.ranking}}</p>
+        <p class="large">{{ movie.id}}</p>
     </div>
     <div class="back">
       <div>
